# libsquid_fits

./: CMakeLists.txt  INSTALL  Makefile  README.md  squidfits.c  squidmerge.c
cmake/Modules/: FindLIBSQUIDWCS.cmake
cmake_modules/: FindLIBSQUIDWCS.cmake
